--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -42,7 +42,7 @@ main {
     "tuile1 tuile2 tuile3"
     "tuile4 tuile2 tuile5"
     "tuile6 tuile6 tuile5";
-  grid-auto-rows: 1fr;
+  // grid-auto-rows: 1fr;
   justify-content: center;
   max-width: 600px;
   margin: 0 auto;
