--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -48,7 +48,7 @@ main {
   margin: 0 auto;
 
   & > div {
-    width: fit-content;
+    width: none;
     max-width: 100%;
     border: 1px solid black;
     border-radius: 30px;
