--- a/src/assets/scss/grid.scss
+++ b/src/assets/scss/grid.scss
@@ -19,7 +19,7 @@ $colArray: ""; // Liste vide pour stocker les nos de nos colonnes
   }
 }
 
-$rowNum: 5; // Nombre de lignes dans la grille
+$rowNum: 5; // Nombre de lignes dans la grille au total
 $rowArray: ""; // Liste vide pour stocker les nos de nos lignes
 
 // Création d'une liste de lignes de 1 à 5 grâce à une boucle for
